--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
-
+    implementation 'androidx.security:security-crypto-ktx:1.1.0-alpha06'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
